工具类补充